--- a/config/sync/node.type.article.yml
+++ b/config/sync/node.type.article.yml
@@ -1,7 +1,13 @@
 uuid: 82287bd5-376a-406c-bcb1-e7c76e602d55
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus: {  }
+    parent: ''
 _core:
   default_config_hash: AeW1SEDgb1OTQACAWGhzvMknMYAJlcZu0jljfeU3oso
 name: Article
