#0005 - paragraph behavior settings for more photos

--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -54,16 +54,22 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
   field_paragraph:
-    type: entity_reference_paragraphs
+    type: paragraphs
     weight: 121
     region: content
     settings:
       title: Paragraph
       title_plural: Paragraphs
       edit_mode: closed
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: _none
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
   field_tags:
     type: entity_reference_autocomplete_tags
