--- a/config/sync/views.view.daily_inspiration_from_inhype.yml
+++ b/config/sync/views.view.daily_inspiration_from_inhype.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.field_image
     - field.storage.node.field_tags
-    - node.type.article
   module:
     - image
     - node
@@ -35,7 +34,7 @@ display:
           admin_label: ''
           plugin_id: field
           label: ''
-          exclude: true
+          exclude: false
           alter:
             alter_text: true
             text: "<h1>{{ title }}<h1> \r\n"
@@ -326,32 +325,7 @@ display:
           exposed: false
           granularity: second
       arguments: {  }
-      filters:
-        status:
-          id: status
-          table: node_field_data
-          field: status
-          entity_type: node
-          entity_field: status
-          plugin_id: boolean
-          value: '1'
-          group: 1
-          expose:
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-        type:
-          id: type
-          table: node_field_data
-          field: type
-          entity_type: node
-          entity_field: type
-          plugin_id: bundle
-          value:
-            article: article
-          expose:
-            operator_limit_selection: false
-            operator_list: {  }
+      filters: {  }
       style:
         type: default
       row:
