#0008 - created custom settings choose classes

--- a/config/sync/paragraphs.paragraphs_type.more_images.yml
+++ b/config/sync/paragraphs.paragraphs_type.more_images.yml
@@ -14,3 +14,5 @@ behavior_plugins:
     enabled: true
   paragraph_begavior_images:
     enabled: true
+  paragraph_style_behavior:
+    enabled: true
