--- a/config/sync/paragraphs.paragraphs_type.text_and_image.yml
+++ b/config/sync/paragraphs.paragraphs_type.text_and_image.yml
@@ -14,3 +14,5 @@ behavior_plugins:
     enabled: true
   paragraph_image_positions:
     enabled: true
+  paragraph_style_behavior:
+    enabled: true
