--- a/config/sync/paragraphs.paragraphs_type.code.yml
+++ b/config/sync/paragraphs.paragraphs_type.code.yml
@@ -12,5 +12,7 @@ description: ''
 behavior_plugins:
   custom_classes:
     enabled: true
+  paragraph_behavior_title:
+    enabled: true
   paragraph_style_behavior:
     enabled: true
