--- a/config/sync/paragraphs.paragraphs_type.more_images.yml
+++ b/config/sync/paragraphs.paragraphs_type.more_images.yml
@@ -14,5 +14,7 @@ behavior_plugins:
     enabled: true
   paragraph_begavior_images:
     enabled: true
+  paragraph_behavior_title:
+    enabled: true
   paragraph_style_behavior:
     enabled: true
