--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -66,6 +66,11 @@ content:
     third_party_settings: {  }
     weight: 3
     region: content
+  prev_next:
+    settings: {  }
+    third_party_settings: {  }
+    weight: 7
+    region: content
 hidden:
   field_tags: true
   langcode: true
